--- a/src/components/portfolioList/portfoliolist.scss
+++ b/src/components/portfolioList/portfoliolist.scss
@@ -10,6 +10,8 @@
 
   a {
     text-decoration: none;
+    color: $text-color;
+    text-transform: uppercase;
   }
 
 
@@ -19,7 +21,10 @@
 
   &.active{
     background-color: $salmon-color;
-    color: white;
     text-decoration: none;
+
+    a {
+      color: white;
+    }
   }
 }
