--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -119,6 +119,15 @@ h1{
   transition: opacity 0s linear .3s;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.box-text{
+  fill: white;
+}
+
 .box-back {
   z-index:0;
   background-image: linear-gradient( #fff, #efefef);
@@ -137,7 +146,7 @@ h1{
   opacity: 0;
   position: absolute;
   bottom: 26px;
-  left: 35px;
+  left: 30px;
   width: 70px;
   font-size: 13px;
   color: #000;
