--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -3,8 +3,7 @@
 .about {
   background-color: $background;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+
 
   p {
     color: $text-color;
@@ -16,12 +15,23 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+
+    @include mobile{
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   .max-width {
     max-width: 1300px;
     padding: 0 80px;
     margin: 50px auto;
+
+    @include mobile{
+      width: 100%;
+      padding: 0px 50px;
+      margin: 50px 0px;
+    }
   }
 
   .about .about-content .left {
@@ -70,12 +80,22 @@
 
   .about-content .left {
     width: 45%;
+
+    @include mobile{
+      width: 100%;
+    }
   }
   .about-content .left img {
     height: auto;
     width: auto;
     object-fit: cover;
     border-radius: 6px;
+
+    @include mobile{
+      height: 100%;
+      width: 100%;
+      padding-bottom: 50px;
+    }
   }
   about-content .right {
     width: 55%;
@@ -84,6 +104,10 @@
     font-size: 25px;
     font-weight: 600;
     margin-bottom: 10px;
+
+    @include mobile{
+      width: 100%;
+    }
   }
   .about-content .right .text span {
     color: $salmon-color;
@@ -103,6 +127,10 @@
     border-radius: 6px;
     transition: all 0.3s ease;
     text-decoration: none;
+
+    @include mobile{
+      font-size: 18px;
+    }
   }
   .about-content .right a:hover {
     color: white;
