--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -30,11 +30,11 @@
     justify-content: center;
     padding-bottom: 15px;
     color: $text-color;
-
     @include mobile {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      margin-bottom: 10px;
     }
   }
 
@@ -66,15 +66,14 @@
     margin-right: auto;
     margin-left: auto;
     padding-bottom: 10%;
-
     @include mobile {
       width: 100%;
     }
-
     @include tablet {
       width: 100%;
     }
   }
+
   .cta-links {
     font-size: 25px;
     display: flex;
@@ -124,6 +123,7 @@
 .overlay {
   background: rgba(49, 49, 49, 0.8);
 }
+
 .modal_content {
   position: absolute;
   top: 50%;
@@ -135,19 +135,28 @@
   border-radius: 3px;
   width: 65%;
 
-  .modal_project_goal{
+  .modal_project_goal {
     display: flex;
+    @include mobile {
+      display: none;
+    }
 
-    li{
+    li {
       margin: auto;
-      padding: 10px 0px;
+      padding: 10px 0;
     }
   }
 
   h1 {
     font-size: 2.5rem;
     text-align: center;
-    padding: 25px 0px;
+    padding: 25px 0;
+  }
+
+  .project_goal {
+    @include mobile {
+      display: none;
+    }
   }
 }
 
@@ -155,20 +164,34 @@
   text-align: center;
   padding-bottom: 2rem;
   border-bottom: 1px solid $taupe;
+  @include mobile {
+    padding-bottom: 1rem;
+  }
 
   h1 {
     font-size: 3.2rem;
-    padding: 0px;
+    padding: 0;
+    @include mobile {
+      font-size: 2rem;
+    }
   }
+
   h2 {
     color: $salmon-color;
     font-size: 1.5rem;
     padding-top: 10px;
   }
+
   p {
     font-size: 1.3rem;
-    padding: 10px 0;
+    padding: 50px 0;
+    text-align: justify;
+    @include mobile {
+      font-size: 1rem;
+      padding: 10px 0;
+    }
   }
+
   a {
     font-weight: 500;
     color: $salmon-color;
@@ -188,7 +211,13 @@
 }
 
 .modal_text {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+  padding: 10px 0;
+  text-align: justify;
+  @include mobile {
+    font-size: 1rem;
+    padding: 0;
+  }
 }
 
 .close_modal {
@@ -198,17 +227,15 @@
   padding: 5px 7px;
   border-radius: 100%;
   border: 1px solid hsla(0, 0%, 100%, 0);
-
   background: transparent;
   font-size: 2.4rem;
   letter-spacing: 0.2rem;
-
   transition: 0.2s;
   cursor: pointer;
 }
 
-.close_modal:hover,
-.close_modal:focus {
+.close_modal:focus,
+.close_modal:hover {
   border-color: hsla(0, 0%, 100%, 0);
   transform: translateY(-0.2rem);
 }
