--- a/src/components/teams/teams.scss
+++ b/src/components/teams/teams.scss
@@ -3,41 +3,43 @@
 .teams {
   box-sizing: border-box;
 
-  h1{
+  h1 {
     color: $text-color;
   }
 
-  .services_section{
+  .services_section {
     padding: 35px 0;
 
-    .inner_width{
+    .inner_width {
       width: 100%;
       max-width: 1200px;
       margin: auto;
       padding: 0 20px;
       overflow: hidden;
+      @include mobile {
+        padding: 0 0;
+      }
     }
 
-    .services_container{
+    .services_container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
     }
 
-    .service_box{
+    .service_box {
       max-width: 40.33%;
       padding: 10px;
       text-align: center;
       color: #ddd;
       cursor: pointer;
       color: black;
-
-      @include mobile{
+      @include mobile {
         max-width: 50%;
       }
     }
 
-    .service_icon{
+    .service_icon {
       display: inline-block;
       width: 70px;
       height: 70px;
@@ -48,7 +50,7 @@
       margin-top: 16px;
       transition: 0.3s linear;
 
-      .icon_top{
+      .icon_top {
         transform: rotate(-45deg);
         font-size: 35px;
         position: relative;
@@ -56,19 +58,22 @@
         padding-top: 15px;
       }
     }
-    .service_box:hover .service_icon{
+
+    .service_box:hover .service_icon {
       background-color: $salmon-color;
       border: $salmon-color;
       color: #ddd;
     }
-    .service_title{
+
+    .service_title {
       font-size: 18px;
       text-transform: uppercase;
       margin-bottom: 10px;
       color: $text-color;
       font-weight: 500;
     }
-    .service_descr{
+
+    .service_descr {
       font-size: 16px;
       color: $text-color;
     }
