--- a/src/components/teams/teams.scss
+++ b/src/components/teams/teams.scss
@@ -10,6 +10,12 @@
   .services_section {
     padding: 35px 0;
 
+  img {
+    text-align: center;
+    margin: auto;
+    display: flex;
+    }
+
     .inner_width {
       width: 100%;
       max-width: 1200px;
