--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -29,6 +29,10 @@
       border: none;
       cursor: pointer;
       text-transform: uppercase;
+
+      @include mobileS {
+      font-size: 15px;
+      }
     }
 
     .btn_top_bar:hover {
@@ -50,6 +54,10 @@
         color: $hover-button;
 
         @include mobileS {
+          display: none;
+        }
+
+        @include mobileS {
           font-size: 25px;
         }
 
@@ -63,7 +71,7 @@
           transition: all 0.3s ease;
 
           @include mobileS {
-            font-size: 25px;
+            display: none;
           }
         }
       }
@@ -74,6 +82,11 @@
         margin-left: 30px;
         @include mobile {
           display: none;
+        }
+        @include mobileS {
+          display: flex;
+          margin-left: 0px;
+          margin-right: 10px;
         }
       }
 
