--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -34,6 +34,7 @@
         font-size: inherit;
         color: inherit;
         text-decoration: none;
+        font-size: 25px;
       }
 
       &:hover {
