--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -106,7 +106,7 @@
           margin-right: 5px;
         }
 
-        span {
+        a {
           font-size: 15px;
           font-weight: 400;
           color: $hover-button;
