--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -165,6 +165,11 @@
       padding: 0;
     }
   }
+  .description_modal{
+    @include mobileS {
+      display: none
+    }
+  }
 
 }
 
@@ -183,7 +188,7 @@
     font-size: 3.2rem;
     padding: 0;
     @include mobile {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
     }
   }
 
@@ -205,6 +210,9 @@
       font-size: 1rem;
       padding: 10px 0;
     }
+    @include mobileS {
+      font-size: 0.8rem;
+    }
   }
 
   a {
@@ -216,7 +224,7 @@
     font-weight: 800;
 
     @include mobileS {
-      font-size: 1rem;
+      font-size: 0.8rem;
     }
   }
 }
@@ -237,6 +245,9 @@
   @include mobile {
     font-size: 1rem;
     padding: 0;
+  }
+  @include mobileS {
+    display: none
   }
 }
 
